--- a/CODE-ALONG-HEADER/index.html
+++ b/CODE-ALONG-HEADER/index.html
@@ -21,9 +21,26 @@
         <span>Leonardo's Site Title</span>
         <button id="ham-btn" class="hamburger"></button>
     </header>
-    <nav></nav>
-    <main></main>
-    <footer></footer>
+    <nav id="nav-bar" class="navigation">
+        <ul>
+            <li><a href="#">News & Events</a></li>
+            <li class="current"><a href="#">Dedicated Temples</a></li>
+            <li><a href="#">Announced Temples</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Dedicated Temples</h1>
+    </main>
+    <footer>
+        <div class="social">
+            <a href="https://github.com" target="_blank"><img src="images/github.svg" alt="GitHub" width="16" height="16"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" width="16" height="16"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.svg" alt="Instagram" width="16" height="16"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.svg" alt="Facebook" width="16" height="16"></a>
+        </div>
+        <p>Copyright symbol and current year</p>
+        <p>Last Modify</p>
+    </footer>
     <script src="scripts/navigation.js"></script>
 </body>
 
