--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD231 Index Page</title>
+    <title>WDD 231 - Home page - Leonardo Wilches</title>
+    <meta name="description" content="WDD 231 - Web Front End Development. Personal main page by Leonardo Wilches. Web development practice and course portfolio.">
+    <meta name="author" content="Leonardo Wilches">
+
     <link rel="stylesheet" href="styles/normalize.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> -->
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/larger.css">
+
+    <script src="scripts/date.js" defer></script>
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/home.svg" alt="Site Logo" width="512" height="512">
+        <span>Leonardo Wilches</span>
+        <button id="ham-btn" class="hamburger" aria-label="Toggle navigation"></button>
+    </header>
+    <nav id="nav-bar" class="navigation">
+        <ul>
+            <li class="current"><a href="#">Home</a></li>
+            <li><a href="#">Chamber</a></li>
+            <li><a href="#">Final</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Home</h1>
+        <section>
+            <h2>About Me</h2>
+        </section>
+        <section>
+            <h2>Student Photo</h2>
+        </section>
+        <section>
+            <h2>Web Certificate Courses</h2>
+        </section>
+    </main>
+    <footer>
+        <div class="social">
+            <a href="https://github.com" target="_blank"><img src="images/github.svg" alt="GitHub" width="16"
+                    height="16"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" width="16"
+                    height="16"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.svg" alt="Instagram"
+                    width="16" height="16"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.svg" alt="Facebook" width="16"
+                    height="16"></a>
+        </div>
+        <div>&copy; <span id="currentyear"></span> Leonardo Wilches — Chile</div>
+        <div id="lastModified"></div>
+    </footer>
 </body>
+
 </html>
