--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <button class="button" id="cseBtn">CSE Courses</button>
                 </div>
                 <p class="credits" id="totalCredits"></p>
-                <section class="course-cards" id="certificate"></section>
+                <div class="course-cards" id="certificate"></div>
             </section>
         </div>
     </main>
