--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="WDD 231 - Web Front End Development. Personal main page by Leonardo Wilches. Web development practice and course portfolio.">
     <meta name="author" content="Leonardo Wilches">
 
+    <link rel="icon" href="images/favicon.ico">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto&display=swap" rel="stylesheet">
