--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name="description" content="WDD 231 - Web Front End Development. Personal main page by Leonardo Wilches. Web development practice and course portfolio.">
     <meta name="author" content="Leonardo Wilches">
 
+    <meta property="og:title" content="WDD 231 Homepage">
+    <meta property="og:description" content="Leonardo Wilches' homepage for the WDD 231 course, which displays personal information, a picture, and the courses for the Web & Computer Programming certificate.">
+    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/images/home.svg">
+    <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/index.html">
+
     <link rel="icon" href="images/favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,7 +58,7 @@
                 </div>
             </section>
             <section class="s3">
-                <h2>Web Certificate Courses</h2>
+                <h2>Web & Computer Programming Certificate Courses</h2>
                 <div class="course-filters">
                     <button class="button" id="allBtn">All Courses</button>
                     <button class="button" id="wddBtn">WDD Courses</button>
