--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -11,8 +11,51 @@
     <meta property="og:description" content="Page content the directory of diferent members of the Chamber of Commerce of San Antonio Chile with their personal and business information">
     <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/chamber/images/home.png">
     <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/directory.html">
+
+    <link rel="icon" href="images/favicon.ico">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/large.css">
+
+    <script src="scripts/navigation.js" defer></script>
+    <script src="scripts/date.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <img src="images/home.svg" alt="Site Logo" width="512" height="512">
+        <span>Leonardo Wilches</span>
+        <button id="ham-btn" class="hamburger" aria-label="Toggle navigation"></button>
+    </header>
+    <nav id="nav-bar" class="navigation">
+        <ul>
+            <li class="current"><a href="#">Home</a></li>
+            <li><a href="#">Chamber</a></li>
+            <li><a href="#">Final</a></li>
+        </ul>
+    </nav>
+    <body>
+        
+    </body>
+    <footer>
+        <div class="social">
+            <a href="https://github.com" target="_blank"><img src="images/github.svg" alt="GitHub" width="16"
+                    height="16"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" width="16"
+                    height="16"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.svg" alt="Instagram" width="16"
+                    height="16"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.svg" alt="Facebook" width="16"
+                    height="16"></a>
+        </div>
+        <div class="name">
+            <div>&copy; <span id="currentyear"></span> Leonardo Wilches — Chile</div>
+            <div id="lastModified"></div>
+        </div>
+    </footer>
 </body>
 </html>
