--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Page content the directory of diferent members of the Chamber of Commerce of San Antonio Chile">
     <meta name="author" content="Leonardo Wilches">
 
-    <meta property="og:title" content="Chamber of Commerce - Directory pag">
-    <meta property="og:description" content="Page content the directory of diferent members of the Chamber of Commerce of San Antonio Chile with their personal and business information">
-    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/chamber/images/home.png">
+    <meta property="og:title" content="Chamber of Commerce - Directory page">
+    <meta property="og:description" content="This page content the directory of diferent members of the Chamber of Commerce of San Antonio Chile with their personal and business information">
+    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/chamber/images/home.png" alt="Chamber of Commerce Logo">
     <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/directory.html">
 
     <link rel="icon" href="images/favicon.ico">
@@ -20,28 +20,46 @@
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
-    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/larger.css">
 
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
+    <script src="scripts/directory.js" defer></script>
 </head>
 <body>
-    <header>
-        <img src="images/home.svg" alt="Site Logo" width="512" height="512">
-        <span>Leonardo Wilches</span>
-        <button id="ham-btn" class="hamburger" aria-label="Toggle navigation"></button>
-    </header>
-    <nav id="nav-bar" class="navigation">
-        <ul>
-            <li class="current"><a href="#">Home</a></li>
-            <li><a href="#">Chamber</a></li>
-            <li><a href="#">Final</a></li>
-        </ul>
-    </nav>
-    <body>
-        
+    <div class="head-navegation">
+        <header>
+            <img src="images/home.png" alt="Site Logo" width="512" height="512">
+            <span>San Antonio Chamber of Commerce</span>
+            <button id="ham-btn" class="hamburger" aria-label="Toggle navigation"></button>
+        </header>
+        <nav id="nav-bar" class="navigation">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li class="current"><a href="#">Directory</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Discover</a></li>
+            </ul>
+        </nav>
+    </div>
+        <section>
+            <h1>Member Directory</h1>
+            <div class="view-buttons">
+                <button id="gridBtn">Grid View</button>
+                <button id="listBtn">List View</button>
+            </div>
+            
+            <div id="membersContainer"></div>
+        </section>
     </body>
     <footer>
+        <div class="info">
+            <div>San Antonio Chamber of Commerce</div>
+            <div>1026 Barros Luco St</div>
+            <div>San Antonio, Chile</div>
+            <div>info@sanantoniocc.org</div>
+            <div>+56 9 9999 9999</div>
+        </div>
         <div class="social">
             <a href="https://github.com" target="_blank"><img src="images/github.svg" alt="GitHub" width="16"
                     height="16"></a>
@@ -52,8 +70,10 @@
             <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.svg" alt="Facebook" width="16"
                     height="16"></a>
         </div>
-        <div class="name">
-            <div>&copy; <span id="currentyear"></span> Leonardo Wilches — Chile</div>
+        <div class="info">
+            <div>Leonardo Wilches</div>
+            <div>WDD 231 Web Front End Development</div>
+            <div>&copy;<span id="currentyear"></span> San Antonio Chamber of Commerce</div>
             <div id="lastModified"></div>
         </div>
     </footer>
