--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,16 +42,17 @@
             </ul>
         </nav>
     </div>
+    <main>
         <section>
             <h1>Member Directory</h1>
             <div class="view-buttons">
                 <button id="gridBtn">Grid View</button>
                 <button id="listBtn">List View</button>
             </div>
-            
+        
             <div id="membersContainer"></div>
         </section>
-    </body>
+    </main>
     <footer>
         <div class="info">
             <div>San Antonio Chamber of Commerce</div>
