--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="Chamber of Commerce - Directory page">
     <meta property="og:description" content="This page content the directory of diferent members of the Chamber of Commerce of San Antonio Chile with their personal and business information">
-    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/chamber/images/home.png" alt="Chamber of Commerce Logo">
+    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/chamber/images/home.png">
     <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/directory.html">
 
     <link rel="icon" href="images/favicon.ico">
