--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -44,12 +44,15 @@
     </div>
     <main>
         <section>
-            <h1>Member Directory</h1>
+            <h1>Business Directory</h1>
             <div class="view-buttons">
-                <button id="gridBtn">Grid View</button>
-                <button id="listBtn">List View</button>
+                <button id="gridBtn">
+                    <img class="btn-img" src="images/grid.svg" alt="Grid Icon Image">
+                </button>
+                <button id="listBtn">
+                    <img class="btn-img" src="images/list.svg" alt="List Icon Image">
+                </button>
             </div>
-        
             <div id="membersContainer"></div>
         </section>
     </main>
