--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -43,8 +43,9 @@
         </nav>
     </div>
     <main>
+        <h1>Business Directory</h1>
         <section>
-            <h1>Business Directory</h1>
+            <h2>San Antonio Chamber of Commerce Business </h2>
             <div class="view-buttons">
                 <button id="gridBtn">
                     <img class="btn-img" src="images/grid.svg" alt="Grid Icon Image">
