--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Page content the directory of diferent members of the Chamber of Commerce of San Antonio Chile">
     <meta name="author" content="Leonardo Wilches">
 
-    <meta property="og:title" content="Chamber of Commerce - Directory page">
+    <meta property="og:title" content="Chamber of Commerce of San Antonio Chile - Directory page">
     <meta property="og:description" content="This page content the directory of diferent members of the Chamber of Commerce of San Antonio Chile with their personal and business information">
     <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/chamber/images/home.png">
     <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/directory.html">
