--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="Chamber of Commerce of San Antonio Chile - Directory page">
     <meta property="og:description" content="This page content the directory of diferent members of the Chamber of Commerce of San Antonio Chile with their personal and business information">
-    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/chamber/images/home.png">
+    <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/chamber/images/san-antonio-chamber.png">
     <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/directory.html">
 
     <link rel="icon" href="images/favicon.ico">
@@ -29,8 +29,8 @@
 <body>
     <div class="head-navegation">
         <header>
-            <img src="images/home.png" alt="Site Logo" width="512" height="512">
-            <span>San Antonio Chamber of Commerce</span>
+            <img src="images/san-antonio-chamber.png" alt="Site Logo" width="512" height="512">
+            <span>San Antonio Chile Chamber of Commerce</span>
             <button id="ham-btn" class="hamburger" aria-label="Toggle navigation"></button>
         </header>
         <nav id="nav-bar" class="navigation">
