--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/chamber/images/san-antonio-chamber.png">
     <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/directory.html">
 
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="path/favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,14 +29,14 @@
 <body>
     <div class="head-navegation">
         <header>
-            <img src="images/san-antonio-chamber.png" alt="Site Logo" width="512" height="512">
+            <img src="images/san-antonio-chamber.webp" alt="Site Logo" width="512" height="512">
             <span>San Antonio Chile Chamber of Commerce</span>
             <button id="ham-btn" class="hamburger" aria-label="Toggle navigation"></button>
         </header>
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li class="current"><a href="#">Directory</a></li>
+                <li class="current"><a href="directory.html">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
