--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://leonardo-wilches.github.io/wdd231/chamber/images/san-antonio-chamber.png">
     <meta property="og:url" content="https://leonardo-wilches.github.io/wdd231/chamber/directory.html">
 
-    <link rel="icon" href="/path/favicon.ico">
+    <link rel="icon" href="images/path/favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
