--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -66,13 +66,13 @@
             <div>+56 9 9999 9999</div>
         </div>
         <div class="social">
-            <a href="https://github.com" target="_blank"><img src="images/github.svg" alt="GitHub" width="16"
+            <a href="https://github.com" target="_blank"><img src="images/github.svg" alt="GitHub Logo Image" width="16"
                     height="16"></a>
-            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" width="16"
+            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn Logo Image" width="16"
                     height="16"></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.svg" alt="Instagram" width="16"
+            <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.svg" alt="Instagram Logo Image" width="16"
                     height="16"></a>
-            <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.svg" alt="Facebook" width="16"
+            <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.svg" alt="Facebook Logo Image" width="16"
                     height="16"></a>
         </div>
         <div class="info">
