--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -29,7 +29,7 @@
 <body>
     <div class="head-navegation">
         <header>
-            <img src="images/san-antonio-chamber.webp" alt="Site Logo" width="512" height="512">
+            <img src="images/san-antonio-chamber.webp" alt="Site Logo Image" width="512" height="512">
             <span>San Antonio Chile Chamber of Commerce</span>
             <button id="ham-btn" class="hamburger" aria-label="Toggle navigation"></button>
         </header>
