--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber of Commerce - Home page</title>
+    <title>San Antonio Chamber of Commerce - Home page</title>
     <meta name="description"
-        content="This page content the langind and home page of the Chamber of Commerce of San Antonio Chile with some local information">
+        content="This page content the langind and home page of the Chamber of Commerce of San Antonio Chile with some local and weather information">
     <meta name="author" content="Leonardo Wilches">
 
     <meta property="og:title" content="Chamber of Commerce of San Antonio Chile - Home page">
