--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,7 +39,7 @@
         <header>
             <img src="images/san-antonio-chamber.webp" alt="Site Logo Image" width="512" height="512">
             <span>San Antonio Chile Chamber of Commerce</span>
-            <button id="ham-btn" class="hamburger" aria-label="Toggle navigation"></button>
+            <a href="#" id="ham-btn" class="hamburger" aria-label="Toggle navigation"></a>
         </header>
         <nav id="nav-bar" class="navigation">
             <ul>
