--- a/chamber/join.html
+++ b/chamber/join.html
@@ -30,6 +30,7 @@
 
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
+    <script src="scripts/join.js" defer></script>
 </head>
 
 <body>
@@ -171,9 +172,6 @@
             </ul>
             <button onclick="gold.close()">Close</button>
         </dialog>
-        <script>
-            document.getElementById("timestamp").value = new Date().toLocaleString();
-        </script>
     </main>
     <footer>
         <div class="info">
