join page changes

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -50,18 +50,24 @@
             </ul>
         </nav>
     </div>
-    <main>
+    <main class="thankyou-main">
         <img src="images/san-antonio-hero.webp" alt="San Antonio Port Image">
-        <section class="section">
-            <h1>Thank You for Joining!</h1>
-            <p>We appreciate your interest in becoming a member of our Chamber.</p>
-        
-            <div class="data"><span class="label">First Name:</span> <span id="firstName"></span></div>
-            <div class="data"><span class="label">Last Name:</span> <span id="lastName"></span></div>
-            <div class="data"><span class="label">Email:</span> <span id="email"></span></div>
-            <div class="data"><span class="label">Mobile Phone:</span> <span id="phone"></span></div>
-            <div class="data"><span class="label">Business Name:</span> <span id="business"></span></div>
-            <div class="data"><span class="label">Date Submitted:</span> <span id="timestamp"></span></div>
+        <section class="thankyou-message">
+            <h1>Thank You for Joining Us!</h1>
+            <p>Your application has been successfully submitted.</p>
+        </section>
+
+        <section class="submitted-info">
+            <h2>Your Submitted Information</h2>
+
+            <ul>
+                <li><strong>First Name:</strong> <span id="fname"></span></li>
+                <li><strong>Last Name:</strong> <span id="lname"></span></li>
+                <li><strong>Email:</strong> <span id="email"></span></li>
+                <li><strong>Mobile Phone:</strong> <span id="phone"></span></li>
+                <li><strong>Business Name:</strong> <span id="business"></span></li>
+                <li><strong>Submission Date:</strong> <span id="timestamp"></span></li>
+            </ul>
         </section>
     </main>
     <footer>
