site plan color

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -34,10 +34,10 @@
     </div>
     <div>
         <h2>Color schema for Traveler's Treasure</h2>
-        <p>Headings: #63FE58</p>
+        <p>Headings: #0baa00</p>
         <p>Paragraphs: #000000</p>
-        <p>Background: #fff0f0</p>
-        <p>Accents: #00254D</p>
+        <p>Background: #ffffff</p>
+        <p>Accents: #00254d</p>
     </div>
     <div>
         <h2>Typography for Traveler's Treasure</h2>
@@ -45,7 +45,7 @@
         <p>Body: Roboto</p>
     </div>
     <figure>
-        <img src="images/page-wireframe.png" alt="Wireframe Image of Traveler's Treasure">
+        <img src="images/page-wireframe.webp" alt="Wireframe Image of Traveler's Treasure">
         <figcaption>Wireframe Image of Traveler's Treasure for larger view and mobile view</figcaption>
     </figure>
 </body>
