Site Plan completed

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -12,14 +12,14 @@
 <body>
     <div>
         <h1>Traveler's Treasure</h1>
-        <p>This name represents a souvenir shop that also has tourist information of interest, where other businesses can join to
-        be promoted.</p>
+        <p>This name represents what a traveler seeks: treasures, in this case tourist treasures of the place they are visiting,
+        and also souvenirs to remember their trips.</p>
         <p>Optional domain availability: travelers-treasure.org</p>
     </div>
     <div>
         <h2>For Traveler's Treasure</h2>
         <p>The purpose of this site is to showcase local businesses and entrepreneurs related to tourism and similar sectors, and
-        to offer suggestions and information about the area. It will also feature a section for purchasing souvenirs, such as
+        to offer suggestions and information about the area like restaurants or natural places. It will also feature a section for purchasing souvenirs, such as
         keychains, magnets, etc., specifically geared towards tourism businesses.</p>
     </div>
     <div>
@@ -30,7 +30,7 @@
         <p>How can I promote my business through your website?</p>
         <p>What will the weather be like where you're traveling to?</p>
         <p>Where are some good places to eat in Santiago?</p>
-        <p></p>Where are there good hotels in Valparaiso?</p>
+        <p>Where are there good hotels in Valparaiso?</p>
     </div>
     <div>
         <h2>Color schema for Traveler's Treasure</h2>
