--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <h1>Traveler's Treasure</h1>
-        <p>This name represents what a traveler seeks: treasures, in this case tourist treasures of the place they are visiting,
+        <p>This name represents what a traveler seeks, that is treasures, in this case tourist treasures of the place they are visiting,
         and also souvenirs to remember their trips.</p>
         <p>Optional domain availability: travelers-treasure.org</p>
     </div>
@@ -20,7 +20,7 @@
         <h2>For Traveler's Treasure</h2>
         <p>The purpose of this site is to showcase local businesses and entrepreneurs related to tourism and similar sectors, and
         to offer suggestions and information about the area like restaurants or natural places. It will also feature a section for purchasing souvenirs, such as
-        keychains, magnets, etc., specifically geared towards tourism businesses.</p>
+        keychains, magnets, etc. This last section specifically geared towards tourism businesses.</p>
     </div>
     <div>
         <h2>Traveler's Treasure</h2>
