--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -53,13 +53,20 @@
     <main>
         <img src="images/san-antonio-hero.webp" alt="San Antonio Port Image">
         <section class="hero-section">
-            <button class="action" aria-label="Toggle navigation">Join Us</button>
+            <a class="action" href="join.html">Join Us</a>
         </section>
         <h1>Discover</h1>
         <div id="places"></div>
         <div id="visit-message" class="visit-message">
             <span id="message-text"></span>
             <button id="close-message" aria-label="Close message">✖</button>
+        </div>
+        <div id="place-modal" class="modal">
+            <div class="modal-content">
+                <button id="close-modal">✖</button>
+                <h2 id="modal-title"></h2>
+                <p id="modal-info"></p>
+            </div>
         </div>
     </main>
     <footer>
@@ -72,13 +79,13 @@
         </div>
         <div class="social">
             <a href="https://github.com" target="_blank"><img src="images/github.svg" alt="GitHub Logo Image" width="16"
-                    height="16"></a>
+                    height="16" loading="lazy"></a>
             <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn Logo Image"
-                    width="16" height="16"></a>
+                    width="16" height="16" loading="lazy"></a>
             <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.svg"
-                    alt="Instagram Logo Image" width="16" height="16"></a>
+                    alt="Instagram Logo Image" width="16" height="16" loading="lazy"></a>
             <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.svg" alt="Facebook Logo Image"
-                    width="16" height="16"></a>
+                    width="16" height="16" loading="lazy"></a>
         </div>
         <div class="info">
             <div>Leonardo Wilches</div>
