--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,7 +53,7 @@
     <main>
         <img src="images/san-antonio-hero.webp" alt="San Antonio Port Image">
         <section class="hero-section">
-            <button class="action" aria-label="Toggle navigation">Join Us</button>
+            <a class="action" href="join.html">Join Us</a>
         </section>
         <h1>Home</h1>
         <div class="home">  
