--- a/finalproject/about.html
+++ b/finalproject/about.html
@@ -43,15 +43,15 @@
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li class="current"><a href="club.html">Treasures Club</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="club.html">Treasures Club</a></li>
+                <li class="current"><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
 <main>
+    <h1>About Traveler’s Treasure</h1>
     <section>
-        <h1>About Traveler’s Treasure</h1>
         <p>
             Traveler’s Treasure was created with one goal in mind: helping travelers discover the hidden gems of every
             destination.
