--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -49,10 +49,10 @@
             </ul>
         </nav>
     </div>
-    <main class="join-main">
+    <main>
+        <h1>Join Our Chamber</h1>
         <section class="form-section">
-            <h1>Join Our Chamber</h1>
-    
+
             <form method="get" action="thankyou.html" class="join-form">
     
                 <label title="Applicant First Name">
